src/styles/global.css
@font-face {
  font-family: 'CD';
  src:
    url('/fonts/CD-Black.woff2') format('woff2'),
    url('/fonts/CD-Black.woff') format('woff');
  font-weight: 700; /* Black */
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: 'CD';
  src:
    url('/fonts/CD-Semibold.woff2') format('woff2'),
    url('/fonts/CD-Semibold.woff') format('woff');
  font-weight: 400; /* Black */
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: 'CD';
  src:
    url('/fonts/CD-Light-Italic.woff2') format('woff2'),
    url('/fonts/CD-Light-Italic.woff') format('woff');
  font-weight: 400; /* Italic */
  font-style: italic;
  font-display: swap;
}

html {
  font-size: 62.5%;
  scroll-behavior: smooth;
  overflow-x: hidden;
}

body {
  background-color: var(--bg-page);
  position: absolute;
  overflow-x: hidden;
  display: flex;
  flex-direction: column;
  align-items: center;
}

main {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: var(--max-width);
}

/* main > section {
  padding-block: var(--section-block);
  padding-inline: var(--section-inline);
  width: var(--max-width);
} */

::selection {
  background-color: var(--orange-200);
  color: var(--neutral-100);
}

h1 {
  font-family: var(--font-header);
  color: var(--text-title-ondark);
  font-size: clamp(5.2rem, calc(6vw + 1rem), 8rem);
  letter-spacing: -1px;
  line-height: 113%;
  text-wrap: balance;
}

h2 {
  font-family: var(--font-header);
  color: var(--text-title);
  font-size: var(--font-05);
  letter-spacing: -0.5px;
  line-height: 1.15;
  text-wrap: balance;
}

h3 {
  font-family: var(--font-header);
  font-weight: var(--font-weight-normal);
  color: var(--text-title);
  font-size: var(--font-04);
  line-height: 100%;
  text-wrap: balance;
}

p {
  font-family: var(--font-body);
  color: var(--text-body);
  font-size: var(--font-02);
  line-height: 1.5;
  font-weight: 400;
}

a {
  text-decoration: none;
}

.news-headline {
  font-size: var(--font-02);
  font-family: var(--font-body);
  line-height: 1.1;
  font-weight: var(--font-weight-semibold);
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 3; /* Changed from 2 to 3 */
  overflow: hidden;
  text-wrap: balance;
  hyphens: auto;
}
.news-source {
  color: var(--neutral-500);
  font-size: var(--font-01);
  font-family: var(--font-body);
  line-height: 1.1;
  font-weight: var(--font-weight-semibold);
}
.news-date {
  color: var(--neutral-500);
  font-size: var(--font-01);
  font-family: var(--font-body);
  font-weight: var(--font-weight-normal);
}

/* Mobile Phone */

@media (max-width: 64rem) {
  body {
    background-color: var(--bg-page);
    overflow-x: hidden;
  }
}

